# FinSight

./: .cursorignore  .cursorrules  .gitignore  README.md  docker-compose.mlflow.yml  docker-compose.simple.yml  docker-compose.yml  requirements.txt
ai_prediction/: .dockerignore  .env.example  .gitignore  Dockerfile  requirements-docker-minimal.txt  requirements-docker.txt  requirements.txt  start_server.bat
backtesting/: .gitignore  README.md  check_status.py  collect_data.py  market_data_job_config.json  openapi.json  start_market_data_job.py
common/: README.md  __init__.py  example_usage.py  pyproject.toml  setup.py  simple_usage.py
common/cache/: __init__.py  cache_factory.py  cache_interface.py  decorators.py  file_cache.py  in_memory_cache.py  redis_cache.py
common/llm/: __init__.py  di_container.py  example_usage.py  llm_facade.py  llm_factory.py  llm_interfaces.py  llm_strategies.py
common/llm/adapters/: __init__.py  google_adk_adapter.py  langchain_adapter.py  openai_adapter.py
common/logger/: __init__.py  logger_factory.py  logger_interface.py  print_logger.py  standard_logger.py
docker/: Dockerfile.mlflow
docs/: README.md  api.md  architecture.md  deployment.md
finetuning/: .gitignore
market_dataset_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  market_data_job_config.json  market_data_quick_run_convert_upload.json  openapi.json  requirements-docker-minimal.txt
model_builder/: .gitignore
news_crawler/: .dockerignore  .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  manage_job.bat  manage_job.ps1  news_crawler_config.json  openapi.json  requirements.txt  start_server.bat  uninstall.txt
news_service/: .env.example  .gitignore  Dockerfile  README.md  (+7 more)
(+747 files in other folders)
