[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-common"
version = "0.1.0"
description = "Common utilities and shared components for FinSight platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinSight Team", email = "team@finsight.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "aiofiles>=24.1.0",
    "colorama>=0.4.6",
    "openai>=1.92.2",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.26",
    "langchain-google-genai>=2.0.10",
    "httpx>=0.28.1",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["common", "common.logger", "common.cache", "common.llm"]

[tool.setuptools.package-dir]
"common" = "."

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true